# ChangeLog for sci-mathematics/gimps
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.69 2014/06/03 20:36:22 tomka Exp $

  03 Jun 2014; Thomas Kahle <tomka@gentoo.org> gimps-28.5.ebuild:
  Fix distfile mess (bug #512182)

  04 May 2014; Agostino Sarubbo <ago@gentoo.org> gimps-27.9-r2.ebuild:
  Stable for x86, wrt bug #506792

  13 Apr 2014; Pacho Ramos <pacho@gentoo.org> gimps-27.9-r2.ebuild:
  amd64 stable, bug #506792

*gimps-27.9-r2 (07 Apr 2014)

  07 Apr 2014; Pacho Ramos <pacho@gentoo.org> +gimps-27.9-r2.ebuild:
  Backport systemd unit files for faster stabilization (#506792 by Paolo
  Pedroni)

  07 Mar 2014; Thomas Kahle <tomka@gentoo.org> -files/gimps.service-r1,
  gimps-28.5.ebuild:
  Revert back to original systemd unit file after consulting systemd team

*gimps-28.5 (07 Mar 2014)

  07 Mar 2014; Thomas Kahle <tomka@gentoo.org> +gimps-28.5.ebuild,
  +files/gimps.service-r1:
  bump to 28.5 (bug #503710) and improve systemd files (bug #503714)

*gimps-28.3-r1 (15 Feb 2014)

  15 Feb 2014; Pacho Ramos <pacho@gentoo.org> +files/gimps.service,
  +files/gimps.tmpfiles, +gimps-28.3-r1.ebuild:
  Add unit file (#499120 by Paolo Pedroni)

*gimps-28.3 (07 Feb 2014)

  07 Feb 2014; Thomas Kahle <tomka@gentoo.org> +gimps-28.3.ebuild:
  bump to 28.3

*gimps-27.9-r1 (13 Nov 2013)

  13 Nov 2013; Thomas Kahle <tomka@gentoo.org> +gimps-27.9-r1.ebuild:
  pax-mark m on the binary (bug 491074)

  12 Apr 2013; Thomas Kahle <tomka@gentoo.org> gimps-27.9.ebuild:
  Migrate from as-is license to GIMPS (bug 465568)

  04 Feb 2013; Justin Lecher <jlec@gentoo.org> -gimps-26.6-r1.ebuild,
  -gimps-27.7-r1.ebuild, metadata.xml:
  Drop old

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gimps-27.9.ebuild:
  Stable for x86, wrt bug #455402

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gimps-27.9.ebuild:
  Stable for amd64, wrt bug #455402

*gimps-27.9 (08 Jan 2013)
