@@ -1,11 +1,0 @@
-DEFINED_PHASES=install postinst postrm
-DESCRIPTION=The Great Internet Mersenne Prime Search
-EAPI=4
-HOMEPAGE=http://mersenne.org/
-KEYWORDS=-* amd64 x86
-LICENSE=GIMPS
-RDEPEND=net-misc/curl
-RESTRICT=binchecks
-SLOT=0
-SRC_URI=amd64? ( ftp://mersenne.org/gimps/p95v279.linux64.tar.gz ) x86? ( ftp://mersenne.org/gimps/p95v279.linux32.tar.gz )
-_md5_=201b1470dd46e39538fdf9440754e30d
