@@ -1,12 +1,0 @@
-DEFINED_PHASES=install postinst postrm
-DESCRIPTION=The Great Internet Mersenne Prime Search
-EAPI=4
-HOMEPAGE=http://mersenne.org/
-KEYWORDS=-* ~amd64
-LICENSE=GIMPS
-RDEPEND=net-misc/curl
-RESTRICT=binchecks
-SLOT=0
-SRC_URI=amd64? ( ftp://mersenne.org/gimps/p95v283.linux64.tar.gz )
-_eclasses_=pax-utils	51ad5130f4a69b1a118ca5296de276ae
-_md5_=5061b0d553fb583a336bdef354c66ef0
