@@ -1,13 +1,0 @@
-DEFINED_PHASES=install postinst postrm
-DEPEND=virtual/pkgconfig
-DESCRIPTION=The Great Internet Mersenne Prime Search
-EAPI=4
-HOMEPAGE=http://mersenne.org/
-KEYWORDS=-* ~amd64
-LICENSE=GIMPS
-RDEPEND=net-misc/curl
-RESTRICT=binchecks
-SLOT=0
-SRC_URI=amd64? ( ftp://mersenne.org/gimps/p95v283.linux64.tar.gz )
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	51ad5130f4a69b1a118ca5296de276ae	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=090e746d03c555f7a0331a7fc6cbc7e6
