@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/gimps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.69 2014/06/03 20:36:22 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gimps/ChangeLog,v 1.70 2014/07/12 16:01:04 tomka Exp $
+
+  12 Jul 2014; Thomas Kahle <tomka@gentoo.org> -gimps-27.9-r1.ebuild,
+  -gimps-27.9.ebuild, -gimps-28.3-r1.ebuild, -gimps-28.3.ebuild:
+  remove old
 
   03 Jun 2014; Thomas Kahle <tomka@gentoo.org> gimps-28.5.ebuild:
   Fix distfile mess (bug #512182)
